updated download and setup page

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -327,9 +327,9 @@ permalink: "download-and-setup.html"
 &lt;link rel="stylesheet" href="/css/colortheme-oceanside.css"></pre>
 
   <h5>Custom CSS</h5>
-  <p>You can add global custom css into <code>/src/scss/custom/custom.scss</code> file. Those styles will be compiled
-   into <code>cagov.core.css</code> file. There is also an option to apply custom css to a specific page. To do that you
-   need to add your custom css file into <code>/src/scss/custom/</code> folder and make reference to it in the page's
+  <p>You can add global custom CSS into <code>/src/scss/custom/custom.scss</code> file. Those styles will be compiled
+   into <code>cagov.core.css</code> file. There is also an option to apply custom CSS to a specific page. To do that you
+   need to add your custom CSS file into <code>/src/scss/custom/</code> folder and make reference to it in the page's
    front matter under <code>customcss</code> key. Here is an example: </p>
   <pre>---
 title: California State Web Template
@@ -355,7 +355,7 @@ customcss: /css/custom/homepage.css
   <button type="button" class="btn btn-default d-block m-b-md brd-primary" style="color:#046B99;" data-bs-toggle="modal"
    data-bs-target="#using-includes">Show sample includes code</button>
 
-  <p>You can also add any other html or njk includes to your page like this:</p>
+  <p>You can also add any other <code>html</code> or <code>njk</code> includes to your page like this:</p>
 
   <pre>{{ '{% include "../../src/_includes/modules/header-primary-banner.html" %}' }}</pre>
 
