removed orphan pages #989

--- a/pages/sample/navigation-icons.html
+++ b/pages/sample/navigation-icons.html
@@ -10,30 +10,22 @@ navigation: "../modules/nav-icons.html"
 
 
 <div class="row">
- <div class="col-md-3">
+
+ <div class="col-md-3" role="complementary">
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
-     <ul>
-      <li><a href="/structure/structure-global-footer.html">Global Footer</a></li>
-      <li><a href="/structure/structure-mobile-controls.html">Mobile Controls</a></li>
-      <li><a href="/structure/structure-search.html">Search</a></li>
-      <li><a href="/structure/structure-settings.html">Settings</a></li>
-      <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/site-navigation.html">Site Navigation</a>
-       <ul>
-        <li><a href="/structure/site-navigation.html#Single-level-menu">Single level menu</a></li>
-        <li><a href="/structure/site-navigation.html#Dropdown-menu">Dropdown menu</a></li>
-        <li><a href="/structure/site-navigation.html#Megamenu">Megamenu</a></li>
-        <li><a href="/structure/site-navigation.html#Icon-menu" class="active">Icon menu</a></li>
-       </ul>
-      </li>
-      <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
-     </ul>
-    </li>
+    <li><a href="/structure.html" id="navigation-list" class="landing">Structure</a></li>
+    <li><a href="/structure/utility-header.html">Utility header</a></li>
+    <li><a href="/structure/settings.html">Settings</a></li>
+    <li><a href="/structure/site-header.html">Site header</a></li>
+    <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
+    <li><a href="/structure/search.html">Search</a></li>
+    <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+    <li><a href="/structure/footer.html">Footer</a></li>
    </ul>
   </nav>
+
  </div>
  <div class="col-md-9 m-b-lg">
 
