--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -104,13 +104,21 @@ permalink: "components/modal.html"
    </div>
    <div id="collapse-include1" class="collapse" role="tabpanel" aria-labelledby="heading-include1">
     <div class="card-body">
-     <h3 class="h4 m-t-0">How it works</h3>
-     <p>To trigger the modal, you'll need to include a link or a button that will trigger the modal. The trigger button
-      element has two custom data attributes: <code>data-bs-toggle</code> and <code>data-bs-target</code>. The
-      toggle attribute tells framework what to do and the target tells framework which element to open. So,
-      whenever a link button that is clicked, a modal with an ID specified in the <code>data-bs-target</code> attribute
-      will
-      appear.
+     <p class="m-b">Each modal has it's own ID. To trigger the modal, you'll need to include a link or a button that
+      refers to the
+      modal's ID. The markup for the trigger element might look like this:</p>
+
+     <pre><code><button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
+       data-bs-target="#news-headlines">Open modal</button></code></pre>
+
+     <p class="m-t">The button element has two custom data attributes:</p>
+     <ul>
+      <li><code>data-bs-toggle</code> tells Bootstrap to open the modal.</li>
+      <li><code>data-bs-target</code> tells Bootstrap which element will open. When a person selects a link or button
+       with that ID (<code>#modalid</code>), that
+       modal will appear.</li>
+     </ul>
+
     </div>
    </div>
   </div>
