updated h2 to Component updates for a11y

--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -73,7 +73,7 @@ permalink: "whats-new.html"
    <li>Added new icons to the icons font library (copy, cut, paste, save, and quotation mark).</li>
   </ul>
 
-  <h2>Components</h2>
+  <h2>Component updates</h2>
   <p>We improved the overall design and functionality of all our components.</p>
   <p>Components in the V6 release:</p>
   <ul>
