updated MVC repo url

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -49,12 +49,9 @@ permalink: "download-and-setup.html"
       </li>
       <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-eleventy">Eleventy</a>
       </li>
-      <li><a href="https://github.com/Office-of-Digital-Services/California-State-Template-NET-core">NET
-        core</a></li>
-      <li class="m-l"><a href="https://github.com/Office-of-Digital-Services/California-State-Template-MVC-v5">MVC</a>
-      </li>
-      <li class="m-l"><a
-        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-react">React</a>
+      <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-NET-Core-MVC">NET Core
+        MVC</a></li>
+      <li><a href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-react">React</a>
       </li>
      </ul>
     </div>
