--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -35,114 +35,48 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
 
   <nav class="page-navigation"></nav>
 
-  <p>Avoid changing text color, especially on regular content. If needed, you can change text color with these classes.
-   This
-   may not have enough color contrast and may not be accessible. If you change the text color, check to make sure there
-   is
-   enough <a href="https://accessibleweb.com/color-contrast-checker/">color contrast</a>.
+  <p>
+    Avoid changing text color, especially on regular content. If needed, you can change text color with these classes.
+    This may not have enough color contrast and may not be accessible. If you change the text color, check to make sure there
+    is enough <a href="https://accessibleweb.com/color-contrast-checker/">color contrast</a>.
   </p>
-  <h2>Accent colors</h2>
 
-  <!--TABS-->
-  <div class="tab-group responsive">
-   <ul id="tabs1" class="nav nav-tabs" role="tablist">
-    <li class="nav-item" role="presentation">
-     <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
-    </li>
-    <li class="nav-item" role="presentation">
-     <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
-    </li>
-   </ul>
+  <h2>Text accent</h2>
 
-   <div id="tab-content" class="tab-content">
-    <!--Examples-->
-    <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-     <div class="card-header" id="heading-example1">
-      <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
-       aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
-       Example
-      </a>
-     </div>
-     <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-      <div class="p-a-md">
-       {% include "../../src/_includes/modules/text-accent.html" %}
-      </div>
-     </div>
-    </div>
+  <p>Use these classes to add accent colors to a word or text portion.</p>
+  <pre style="max-height: 300px;"><code><p class="py-1 text-accent1">Accent Text 1</p></code></pre>
 
-    <!--HTML-->
-    <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-     <div class="card-header" id="heading-html1">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
-       aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-       Source code
-      </a>
-     </div>
-     <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-      <div class="card-body">
-       <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/text-accent.html" %}</code>
-                     </pre>
-      </div>
-     </div>
-    </div>
-
-   </div>
-  </div>
-  <!--END TABS-->
+  <h3>Classes</h3>
+  <p class="py-1 text-accent1">.text-accent1</p>
+  <p class="py-1 text-accent2">.text-accent2</p>
+  <p class="py-1 text-accent3">.text-accent3</p>
+  <p class="py-1 text-accent4">.text-accent4</p>
+  <p class="py-1 text-accent5">.text-accent5</p>
+  <p class="py-1 text-accent6">.text-accent6</p>
+  <p class="py-1 text-accent7">.text-accent7</p>
+  <p class="py-1 text-accent8">.text-accent8</p>
+  <p class="py-1 text-accent9 bg-dark">.text-accent9 </p>
+  <p class="py-1 text-accent-p1 bg-dark">.text-accent-p1</p>
+  <p class="py-1 text-accent-p2">.text-accent-p2</p>
+  <p class="py-1 text-accent-p3">.text-accent-p3</p>
+  <p class="py-1 text-accent-s1 bg-dark">.text-accent-s1</p>
+  <p class="py-1 text-accent-s2 bg-dark">.text-accent-s2</p>
+  <p class="py-1 text-accent-s3 bg-dark">.text-accent-s3</p>
+  <p class="py-1 text-muted">.text-muted</p>
+  <p class="py-1 text-primary">.text-primary</p>
+  <p class="py-1 text-success">.text-success</p>
+  <p class="py-1 text-info">.text-info</p>
+  <p class="py-1 text-warning bg-dark">.text-warning</p>
+  <p class="py-1 text-danger">.text-danger</p>
 
   <h2>Text highlight</h2>
   <p>Use this class to highlight a word or text portion.</p>
-
-  <!--TABS-->
-  <div class="tab-group responsive">
-   <ul id="tabs4" class="nav nav-tabs" role="tablist">
-    <li class="nav-item" role="presentation">
-     <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
-    </li>
-    <li class="nav-item" role="presentation">
-     <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
-    </li>
-
-   </ul>
-
-   <div id="tab-content" class="tab-content">
-    <!--Examples-->
-    <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
-     <div class="card-header" id="heading-example2">
-      <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
-       aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
-       Example
-      </a>
-     </div>
-     <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
-      <div class="p-a-md">
-
-       {% include "../../src/_includes/modules/text-highlight.html" %}
-
-      </div>
-     </div>
-    </div>
-
-    <!--HTML-->
-    <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
-     <div class="card-header" id="heading-html2">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
-       aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-       Source code
-      </a>
-     </div>
-     <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
-      <div class="card-body">
-       <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/text-highlight.html" %}</code>
-   </pre>
-
-      </div>
-     </div>
-    </div>
-
-   </div>
-  </div>
-  <!--END TABS-->
+  <pre style="max-height: 300px;"><code><span class="text-highlight">Highlighted text</span></code></pre>
+  <h3>Classes</h3>
+  <p><span class="py-1 text-highlight">.text-highlight</span></p>
+  <p><span class="py-1 text-highlight-primary">.text-highlight-primary</span></p>
+  <p><span class="py-1 text-highlight-warning">.text-highlight-warning</span></p>
+  <p><span class="py-1 text-highlight-dark">.text-highlight-dark</span></p>
 
  </div>
 </div>
