fixed what's new page a11y #956

--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -37,7 +37,7 @@ permalink: "whats-new.html"
   <p>Version 6 of the State Web Template has a new look and feel. With improvements that align with the
    <a href="https://designsystem.webstandards.ca.gov/">California Design System</a>, V6 sets a modern digital standard.
   </p>
-  <h2>Patterns</h2>
+  <h2>New patterns section</h2>
   <p>Content patterns are a brand new addition to the State Web Template. Patterns are reusable combinations of
    components that solve common user problems. These best practice solutions help users achieve their goals and help
    ensure consistency across experiences.</p>
