--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -216,7 +216,7 @@ permalink: "visual-design/icons.html"
             </div>
             <div class="icon-specs p-r  gray-900">
               <p style="text-transform:capitalize" class="bold m-t m-b-0 font-size-16">${icon.properties.name.replace('-', ' ')}</p>
-              <p class="font-size-13 m-0">ca-gov-icon-${icon.properties.name}</p>
+              <p class="font-size-14 m-0">ca-gov-icon-${icon.properties.name}</p>
             </div>
           </div>
           `;
@@ -397,7 +397,7 @@ permalink: "visual-design/icons.html"
     class="search-textfield rounded-5 icons-searchbox">
    <button type="reset" title="reset" class="border-0 color-white icon-reset"><span class="ca-gov-icon-close-mark"
      aria-hidden="true"></span><span class="sr-only">Reset</span></button>
-   <button type="submit" value="Submit" onclick="javascript:buildList(false,0);" class="sr-only"></button>
+   <button type="submit" value="Submit" onclick="javascript:buildList(false,0);" class="sr-only" aria-label="Submit"></button>
   </form>
 
   <div id="jumpToHeading">
