--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -44,7 +44,7 @@ permalink: "contact-us.html"
 
    <label class="form-control-label  m-t-lg" for="InputRole">Main role</label>
 
-   <select class="form-select form-select-lg mb-3" id="InputRole" name="Role">
+   <select class="form-select form-select-lg mb-3" id="InputRole" name="Role" role="listitem">
     <option selected="">Select an option</option>
     <option value="Analytics">Analytics</option>
     <option value="Content">Content</option>
@@ -79,7 +79,7 @@ permalink: "contact-us.html"
 <h2>Get support from developers</h2>
 <p>
  Post questions on
- <a href="https://github.com/Office-of-Digital-Services/">GitHub</a> and
+ <a href="https://github.com/Office-of-Digital-Services/"><span class="sr-only">Digital Services</span> GitHub</a> and
  leverage our digital community.
 </p>
 
