added blank option

--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -45,7 +45,7 @@ permalink: "contact-us.html"
    <label class="form-control-label  m-t-lg" for="InputRole">Main role</label>
 
    <select class="form-select form-select-lg mb-3" id="InputRole" name="Role" role="listitem">
-    <option selected="">Select an option</option>
+    <option selected="" value="">Select an option</option>
     <option value="Analytics">Analytics</option>
     <option value="Content">Content</option>
     <option value="Design">Design</option>
