--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -1,13 +1,11 @@
 ﻿---
 title: Privacy policy
-layout: page.njk
+layout: one-col.njk
 permalink: "privacy-policy.html"
 ---
 
 <h1 class="mt-lg-0">Privacy policy</h1>
-<h2 role="heading" aria-level="2">
-  <strong>Effective 5/23/17</strong>
-</h2>
+<p><span class="bold">Effective 5/23/17</span></p>
 <p>The California Department of Technology, which runs CA.gov,&nbsp;is committed to promoting and
  protecting the privacy rights of individuals, as enumerated in Article 1 of the California
  Constitution, the Information Practices Act of 1977, and other state and federal laws.</p>
@@ -19,14 +17,15 @@ permalink: "privacy-policy.html"
  privacy. This Privacy Policy only applies to the CA.gov web site run by the&nbsp;Department of
  Technology.</p>
 <p>
-  <strong>“Personal information”</strong> is information about a natural person that identifies or
+ <span class="bold">“Personal information”</span> is information about a natural person that identifies or
  describes an individual, including, but not limited to, his or her name, social security number,
  physical description, home address, home telephone number, education, financial matters, and medical
  or employment history, readily identifiable to that specific individual. A domain name or Internet
  Protocol address is not considered personal information; however, it is considered “electronically
- collected personal information.”</p>
-<p>According to Government Code § 11015.5, <strong>“electronically collected personal
-  information”</strong> means any information that is maintained by an agency that identifies or
+ collected personal information.”
+</p>
+<p>According to Government Code § 11015.5, <span class="bold">“electronically collected personal
+  information”</span> means any information that is maintained by an agency that identifies or
  describes an individual user, including, but not limited to, his or her name, social security
  number, physical description, home address, home telephone number, education, financial matters,
  medical or employment history, password, electronic mail address, and information that reveals any
@@ -47,29 +46,31 @@ permalink: "privacy-policy.html"
  a public record once it is provided and except for electronically collected information, it may be
  subject to public inspection and copying if not otherwise protected by federal or state law.</p>
 <p>
-  <strong>The Department of Technology adheres to the following principles in connection with the
-  collection and management of personal information:</strong>
+ <span class="bold">The Department of Technology adheres to the following principles in connection with the
+  collection and management of personal information:</span>
 </p>
 <ol>
-  <li>
-    <strong>The Department of Technology collects personal information on individuals only as
-   allowed by law</strong>. The Department limits the collection of personal information to
+ <li>
+  <span class="bold">The Department of Technology collects personal information on individuals only as
+   allowed by law</span>. The Department limits the collection of personal information to
   what is relevant and necessary to accomplish its lawful purpose. For example, the Department may
   need to know an individual’s e-mail address or telephone number in order to answer the
-  individual’s questions or in order to provide requested assistance.</li>
-  <li>
-    <strong>The Department of Technology does not collect home, business or e-mail addresses, or
-   account information from persons who simply browse the CA.gov web site</strong>. Personal
+  individual’s questions or in order to provide requested assistance.
+ </li>
+ <li>
+  <span class="bold">The Department of Technology does not collect home, business or e-mail addresses, or
+   account information from persons who simply browse the CA.gov web site</span>. Personal
   information about individuals is collected through this web site only if an individual provides
   such information to the Department voluntarily through e-mail, registration forms, or surveys,
   for example. This information will be used to facilitate in responding to the person or improve
   the content or navigation of the web site or provide survey information to users. The
   information collected in this manner is not subject to requests made pursuant to the Public
   Records Act, and site visitors may request to have their information discarded without reuse or
-  distribution.</li>
-  <li>
-    <strong>The Department of Technology uses Google Analytics to help improve the web
-   site</strong>. Google tracking cookies may be used to provide information to Google
+  distribution.
+ </li>
+ <li>
+  <span class="bold">The Department of Technology uses Google Analytics to help improve the web
+   site</span>. Google tracking cookies may be used to provide information to Google
   Analytics. Our web site may use Google Analytics to track web site statistics. Google tracking
   code used by every web site or application that employs Google Analytics, stores information
   that identifies device IP addresses, but our web site is anonymizing that information and only
@@ -77,9 +78,9 @@ permalink: "privacy-policy.html"
   device is being stored at Google via our utilization of Google Analytics implementation. <a
    href="https://support.google.com/analytics/answer/2763052?hl=en">You can find out more about
    Google Analytics anonymized IP addresses by clicking here.</a>
-  </li>
-  <li>
-    <strong>The Department of Technology’s use of your e-mail.</strong> You may choose to provide us
+ </li>
+ <li>
+  <span class="bold">The Department of Technology’s use of your e-mail.</span> You may choose to provide us
   with personal information, as in e-mail with a comment or question. We use the information to
   improve our service to you or to respond to your request. Sometimes we forward your e-mail to
   other State employees who may be better able to help you, and this staff may be employed by a
@@ -90,29 +91,32 @@ permalink: "privacy-policy.html"
   Submission of an email to the Department, the Department staff and/or communication through the
   web site does not create any attorney-client or other privileged or confidential relationship.
   Accordingly, do not disclose any information to the Department that you wish to remain private
-  or confidential.</li>
-  <li>
-    <strong>The Department of Technology provides people who provide personal information with an
-   opportunity to review that information.</strong> Individuals, who provide personal
+  or confidential.
+ </li>
+ <li>
+  <span class="bold">The Department of Technology provides people who provide personal information with an
+   opportunity to review that information.</span> Individuals, who provide personal
   information, are allowed to review the information and contest its accuracy or completeness.
  </li>
-  <li>
-    <strong>The Department of Technology uses personal information only as specified and consistent
+ <li>
+  <span class="bold">The Department of Technology uses personal information only as specified and consistent
    with those purposes; unless the Department obtains the consent of the subject of the
-   information, or as required or allowed by law. </strong>The Public Records Act exists to
+   information, or as required or allowed by law. </span>The Public Records Act exists to
   ensure that California government is open and that the public has a right to have access to
   appropriate records and information possessed by many state and local government agencies. At
   the same time, there are exceptions that recognize the public’s right to access records. These
   exceptions serve various needs, including maintaining the privacy of individuals. In the event
   of a conflict between this Policy and the Public Records Act, the Information Practices Act or
-  other law governing the disclosure of records, the applicable law will control.</li>
-  <li>
-    <strong>How the Department of Technology collects and uses your information.</strong> We do
+  other law governing the disclosure of records, the applicable law will control.
+ </li>
+ <li>
+  <span class="bold">How the Department of Technology collects and uses your information.</span> We do
   collect personal information directly from individuals who volunteer to use some of our
   services. Collection of this information is required to deliver the specific services, but use
-  of these services is voluntary.</li>
-  <li>
-    <strong>How the Department of Technology protects your information.</strong> The Department, as
+  of these services is voluntary.
+ </li>
+ <li>
+  <span class="bold">How the Department of Technology protects your information.</span> The Department, as
   developer and manager of this web site, has taken several steps to safeguard the integrity of
   its telecommunications and computing infrastructure, including but not limited to
   authentication, monitoring, auditing. Security measures have been integrated into the design,
@@ -120,22 +124,23 @@ permalink: "privacy-policy.html"
   its continuing commitment to risk management. This information should not be construed in any
   way as giving business, legal, or other advice, or warranting as fail proof, the security of
   information provided via the Department’s supported web site. The technical standards governing
-  security are enforced by the Department of Finance.</li>
+  security are enforced by the Department of Finance.
+ </li>
 </ol>
 <p>If you do nothing during your visit to the web site but browse or download information, we
  automatically collect and store the following information about your visit:</p>
 <ol>
-  <li>A partial Internet Protocol address and domain name is collected, but not the e-mail address.
+ <li>A partial Internet Protocol address and domain name is collected, but not the e-mail address.
   The partial Internet Protocol address is used to direct Internet traffic to you without
   identifying you individually and generate statistics used in the management of this web site;
  </li>
-  <li>The type of browser and operating system you used;</li>
-  <li>The city and zip code you used it from;</li>
-  <li>The date and time you visited this web site;</li>
-  <li>The web pages or services you accessed at this web site;</li>
-  <li>The web site you visited prior to coming to this web site;</li>
-  <li>The web site you visit as you leave this web site, and;</li>
-  <li>If you downloaded a form, the form that was downloaded.</li>
+ <li>The type of browser and operating system you used;</li>
+ <li>The city and zip code you used it from;</li>
+ <li>The date and time you visited this web site;</li>
+ <li>The web pages or services you accessed at this web site;</li>
+ <li>The web site you visited prior to coming to this web site;</li>
+ <li>The web site you visit as you leave this web site, and;</li>
+ <li>If you downloaded a form, the form that was downloaded.</li>
 </ol>
 <p>The information we automatically collect or store is used to improve the content of our web services
  and to help us understand how people are using our services. This information does not identify you
@@ -162,17 +167,17 @@ permalink: "privacy-policy.html"
  Department via <a href="mailto:StateInfo@state.ca.gov">email</a>, by phone at (916) 319-9223, or by
  mail to:</p>
 <p>
-  <strong>
+ <span class="bold">
   California Department of Technology<br>
-  </strong>
-  <strong>
+ </span>
+ <span class="bold">
   1325 J Street, Suite 1600<br>
-  </strong>
-  <strong>Sacramento, CA 95814</strong>
+ </span>
+ <span class="bold">Sacramento, CA 95814</span>
 </p>
 <p>
-  <strong>
-    <br>
+ <strong>
+  <br>
   The CA.gov privacy policy prior to 5/23/17 was as follows:
  </strong>
 </p>
@@ -193,16 +198,16 @@ permalink: "privacy-policy.html"
 <p>(e) The general means by which personal data is protected against loss, unauthorized access, use,
  modification, or disclosure shall be posted, unless the disclosure of those general means would
  compromise legitimate agency objectives or law enforcement purposes.</p>
-<h3>Each department shall implement this privacy policy by:</h3>
-<ul class="list-understated m-b-lg">
-  <li>Designating which position within the department or agency is responsible for the implementation
+<h2>Each department shall implement this privacy policy by:</h2>
+<ul>
+ <li>Designating which position within the department or agency is responsible for the implementation
   of and adherence to this privacy policy;</li>
-  <li>Prominently posting the policy physically in its offices and on its Internet website, if any;
+ <li>Prominently posting the policy physically in its offices and on its Internet website, if any;
  </li>
-  <li>Distributing the policy to each of its employees and contractors who have access to personal
+ <li>Distributing the policy to each of its employees and contractors who have access to personal
   data;</li>
-  <li>Complying with the Information Practices Act (Civil Code Section 1798 et seq.), the Public
+ <li>Complying with the Information Practices Act (Civil Code Section 1798 et seq.), the Public
   Records Act (Government Code Section 6250 et seq.), Government Code Section 11015.5, and all
   other laws pertaining to information privacy, and</li>
-  <li>Using appropriate means to successfully implement and adhere to this privacy policy.</li>
+ <li>Using appropriate means to successfully implement and adhere to this privacy policy.</li>
 </ul>
