icons 965, page nav

--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -396,7 +396,7 @@ permalink: "visual-design/icons.html"
    <input type="text" name="iconsearch" aria-labelledby="IconInput" placeholder="Browse icons"
     class="search-textfield rounded-5 icons-searchbox">
    <button type="reset" title="reset" class="border-0 color-white icon-reset"><span class="ca-gov-icon-close-mark"
-     aria-hidden="true"></span><span class="sr-only">Reset</span></button>
+     aria-hidden="true" aria-label="Reset"></span><span class="sr-only">Reset</span></button>
    <button type="submit" value="Submit" onclick="javascript:buildList(false,0);" class="sr-only" aria-label="Submit"></button>
   </form>
 
