Update homepage aria-lables, change background-gradient source example style

--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -77,8 +77,35 @@ permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
      </div>
      <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
       <div class="card-body">
-       <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/gradient-linear.html" %}</code>
-                     </pre>
+      <h4>Primary</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-gradient"></div></code></pre>
+
+      <h4>Highlight</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-highlight-gradient"></div></code></pre>
+
+      <h4>Standout</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-standout-gradient"></div></code></pre>
+
+      <h4>Secondary</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-secondary-gradient"></div></code></pre>
+
+      <h4>Primary-standout</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-standout-gradient"></div></code></pre>
+
+      <h4>Primary-highlight</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-highlight-gradient"></div></code></pre>
+
+      <h4>Primary-secondary</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-secondary-gradient"></div></code></pre>
+
+      <h4>Standout-highlight</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-standout-highlight-gradient"></div></code></pre>
+
+      <h4>Danger-warning</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-danger-warning-gradient"></div></code></pre>
+
+      <h4>Info-success</h4>
+      <pre style="max-height: 300px;"><code><div class="container height-100 bg-info-success-gradient"></div></code></pre>
       </div>
      </div>
     </div>
@@ -125,8 +152,26 @@ permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
      </div>
      <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
       <div class="card-body">
-       <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/gradient-radial.html" %}</code>
-                      </pre>
+        <h4>Gray</h4>
+        <pre style="max-height: 300px;"><code><div class="container height-100 bg-grey-radialgradient"></div></code></pre>
+
+        <h4>Grey Light</h4>
+        <pre style="max-height: 300px;"><code><div class="container height-100 bg-greylight-radialgradient"></div></code></pre>
+
+        <h4>Primary</h4>
+        <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-radialgradient"></div></code></pre>
+
+        <h4>Highlight</h4>
+        <pre style="max-height: 300px;"><code><div class="container height-100 bg-highlight-radialgradient"></div></code></pre>
+
+        <h4>Standout</h4>
+        <pre style="max-height: 300px;"><code><div class="container height-100 bg-standout-radialgradient"></div></code></pre>
+
+        <h4>Secondary</h4>
+        <pre style="max-height: 300px;"><code><div class="container height-100 bg-secondary-radialgradient"></div></code></pre>
+
+        <h4>Secondary light</h4>
+        <pre style="max-height: 300px;"><code><div class="container height-100 bg-secondarylight-radialgradient"></div></code></pre>
       </div>
      </div>
     </div>
