--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -405,7 +405,7 @@ permalink: "visual-design/icons.html"
    <input type="text" name="iconsearch" aria-labelledby="IconInput" placeholder="Browse icons"
     class="search-textfield rounded-5 icons-searchbox">
    <button type="submit" title="submit" class="border-0 color-white icon-submit" aria-label="Submit" onclick="javascript:buildList(false,0);"><span class="ca-gov-icon-search" aria-hidden="true"></span><span class="sr-only">Submit</span></button>
-   <button type="reset" title="reset" value="reset"  class="reset-button" aria-label="Reset"><span class="ca-gov-icon-close-mark" aria-hidden="true"></span><span class="sr-only">Reset</span></button>
+   <button type="reset" title="clear" value="reset"  class="reset-button" aria-label="Reset"><span class="ca-gov-icon-close-mark" aria-hidden="true"></span><span class="sr-only">Reset</span></button>
   </form>
 
   <div id="jumpToHeading">
